--- a/urbanbyte/contact-us/index.html
+++ b/urbanbyte/contact-us/index.html
@@ -52,27 +52,17 @@
 							<div id="sidebar-top"></div>
 							<div id="sidebar-content">
 								<h3 class="hidden">Sidebar<a rel="nofollow" href="#main">[Skip]</a></h3>
-								<div class="pagelet untitled i1 o">
+								<div class="pagelet untitled i1 o last-item">
 									<div class="pagelet-body">
 										<div class="ImageElement">
 											<div class="photo">
 												<div>
-													<!-- sandvox.ImageElement --><span data-img-src="../_Media/sidebar_med-3.png" data-img-src-hr="../_Media/sidebar_med_hr-3.png" data-alt="Line!Icon128x128" data-width="128" data-height="215" style="width:128px; height:215px;">
-														<noscript><img src="../_Media/sidebar_med-3.png" alt="Line!Icon128x128" width="128" height="215" /></noscript>
-													</span>
+													<!-- sandvox.ImageElement --><a href="https://www.facebook.com/UrbanByte-978108002268714/" target="_blank" class="imageLink"><span data-img-src="../_Media/fb2_med.png" data-img-src-hr="../_Media/fb2_med_hr.png" data-alt="FB2" data-width="217" data-height="59" style="width:217px; height:59px;">
+															<noscript><img src="../_Media/fb2_med.png" alt="FB2" width="217" height="59" /></noscript>
+														</span>
+													</a>
 													<!-- /sandvox.ImageElement -->
 												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="pagelet titled i2 e last-item">
-									<h4 class="title pagelet-title"><span class="in"><span style="font-size: 22px; font-family: 'Helvetica Neue';">  Buy Now!</span></span></h4>
-									<div class="pagelet-body">
-										<div class="RichTextElement">
-											<div>
-												<p style="text-align: center;" class="MsoNormal"><a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1090772813&amp;mt=8" target="_blank"><img src="../_Media/badge_med_hr.jpeg" alt="" width="200" height="59" class="first" /></a></p>
-												
 											</div>
 										</div>
 									</div>
