--- a/urbanbyte/faq/index.html
+++ b/urbanbyte/faq/index.html
@@ -58,9 +58,10 @@
 										<div class="ImageElement">
 											<div class="photo">
 												<div>
-													<!-- sandvox.ImageElement --><span data-img-src="../_Media/logo_med.png" data-img-src-hr="../_Media/logo_med_hr.png" data-alt="logo" data-width="228" data-height="176" style="width:228px; height:176px;">
-														<noscript><img src="../_Media/logo_med.png" alt="logo" width="228" height="176" /></noscript>
-													</span>
+													<!-- sandvox.ImageElement --><a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=947652867&amp;mt=8" target="_blank" class="imageLink"><span data-img-src="../_Media/21_med.png" data-img-src-hr="../_Media/21_med_hr.png" data-alt="21" data-width="228" data-height="247" style="width:228px; height:247px;">
+															<noscript><img src="../_Media/21_med.png" alt="21" width="228" height="247" /></noscript>
+														</span>
+													</a>
 													<!-- /sandvox.ImageElement -->
 												</div>
 											</div>
@@ -72,13 +73,17 @@
 										<div class="ImageElement">
 											<div class="photo">
 												<div>
-													<!-- sandvox.ImageElement --><a href="https://www.facebook.com/UrbanByte-978108002268714/" target="_blank" class="imageLink"><img src="../_Media/fb_med_hr.png" alt="FB" width="100" height="101" /></a>
-													<!-- /sandvox.ImageElement --></div>
+													<!-- sandvox.ImageElement --><a href="https://www.facebook.com/UrbanByte-978108002268714/" target="_blank" class="imageLink"><span data-img-src="../_Media/facebookimage_med.png" data-img-src-hr="../_Media/facebookimage_med_hr.png" data-alt="facebooKIMAGE" data-width="100" data-height="100" style="width:100px; height:100px;">
+															<noscript><img src="../_Media/facebookimage_med.png" alt="facebooKIMAGE" width="100" height="100" /></noscript>
+														</span>
+													</a>
+													<!-- /sandvox.ImageElement -->
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-								<div class="pagelet untitled i3 o">
+								<div class="pagelet untitled i3 o last-item">
 									<div class="pagelet-body">
 										<div class="ImageElement">
 											<div class="photo">
@@ -89,17 +94,6 @@
 													</a>
 													<!-- /sandvox.ImageElement -->
 												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="pagelet titled i4 e last-item">
-									<h4 class="title pagelet-title"><span class="in"><span style="font-size: 22px; font-family: 'Helvetica Neue';">  Buy Now!</span></span></h4>
-									<div class="pagelet-body">
-										<div class="RichTextElement">
-											<div>
-												<p style="text-align: center;" class="MsoNormal"><a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=947652867&amp;mt=8" target="_blank"><img src="../_Media/badge_med_hr.jpeg" alt="" width="200" height="59" class="first" /></a></p>
-												
 											</div>
 										</div>
 									</div>
