--- a/urbanbyte/index.html
+++ b/urbanbyte/index.html
@@ -59,8 +59,12 @@
 										<div class="ImageElement">
 											<div class="photo">
 												<div>
-													<!-- sandvox.ImageElement --><a href="https://www.facebook.com/UrbanByte-978108002268714/" target="_blank" class="imageLink"><img src="_Media/fb_med_hr.png" alt="FB" width="100" height="101" /></a>
-													<!-- /sandvox.ImageElement --></div>
+													<!-- sandvox.ImageElement --><a href="https://www.facebook.com/UrbanByte-978108002268714/" target="_blank" class="imageLink"><span data-img-src="_Media/facebookimage_med.png" data-img-src-hr="_Media/facebookimage_med_hr.png" data-alt="facebooKIMAGE" data-width="100" data-height="100" style="width:100px; height:100px;">
+															<noscript><img src="_Media/facebookimage_med.png" alt="facebooKIMAGE" width="100" height="100" /></noscript>
+														</span>
+													</a>
+													<!-- /sandvox.ImageElement -->
+												</div>
 											</div>
 										</div>
 									</div>
