--- a/app/index.html
+++ b/app/index.html
@@ -31,8 +31,14 @@
     <li class="nav-item">
       <a class="nav-link" href="#!/control">Manual Control <span class="sr-only">(current)</span></a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#!/setup">Setup <span class="sr-only">(current)</span></a>
+    </li>
   </ul>
 </nav>
+<div class="page-header">
+  <h1 class="text-primary">Example Property Name <small>Name of Property Manager</small></h1>
+</div>
 
 
   <!--[if lt IE 7]>
@@ -51,11 +57,13 @@
   <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/ngToast/dist/ngToast.min.js"></script>
+  <script src="bower_components/papaparse/papaparse.min.js"></script>
   <script src="app.js"></script>
   <script src="overview/overview.js"></script>
   <script src="calendar/calendar.js"></script>
   <script src="control/control.js"></script>
   <script src="services/system.js"></script>
+  <script src="setup/setup.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
