--- a/build2/index.html
+++ b/build2/index.html
@@ -8,7 +8,7 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width">
 
-      <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="build2/css/main.css">
   </head>
   <body>
 
@@ -32,8 +32,8 @@
 
       <div ui-view></div>
 
-      <script src="api/mockapi.js"></script>
-      <script src="js/main.js"></script>
+      <script src="build2/api/mockapi.js"></script>
+      <script src="build2/js/main.js"></script>
 
   </body>
 </html>
