--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width">
 
-      <link rel="stylesheet" href="app/css/main.css">
+      <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
@@ -32,8 +32,8 @@
 
       <div ui-view></div>
 
-      <script src="app/default/js/mockedquery.js"></script>
-      <script src="app/js/main.js"></script>
+      <script src="default/js/mockedquery.js"></script>
+      <script src="js/main.js"></script>
 
   </body>
 </html>
