--- a/app/index.html
+++ b/app/index.html
@@ -8,21 +8,21 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width">
 
-      <link rel="stylesheet" href="app/css/main.css">
+      <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <a class="navbar-brand" href="/overview">Overview</a>
+      <a class="navbar-brand" href="#!/overview">Overview</a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/calendar">Calendar</span></a>
+          <a class="nav-link" href="#!/calendar">Calendar</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/control">Manual Control</span></a>
+          <a class="nav-link" href="#!/control">Manual Control</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/setup">Setup</span></a>
+          <a class="nav-link" href="#!/setup">Setup</span></a>
         </li>
       </ul>
     </nav>
@@ -32,8 +32,8 @@
 
       <div ui-view></div>
 
-      <script src="app/default/js/mockedquery.js"></script>
-      <script src="app/js/main.js"></script>
+      <script src="default/js/mockedquery.js"></script>
+      <script src="js/main.js"></script>
 
   </body>
 </html>
