--- a/app/index.html
+++ b/app/index.html
@@ -13,16 +13,16 @@
   <body>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <a class="navbar-brand" href="#!/overview">Overview</a>
+      <a class="navbar-brand" href="/overview">Overview</a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#!/calendar">Calendar</span></a>
+          <a class="nav-link" href="/calendar">Calendar</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#!/control">Manual Control</span></a>
+          <a class="nav-link" href="/control">Manual Control</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#!/setup">Setup</span></a>
+          <a class="nav-link" href="/setup">Setup</span></a>
         </li>
       </ul>
     </nav>
@@ -33,7 +33,7 @@
       <div ui-view></div>
 
       <script src="app/default/js/mockedquery.js"></script>
-      <script src="app/js/main.js"></script>
+      <script src="app/main.js"></script>
 
   </body>
 </html>
