--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
       <div ui-view></div>
 
       <script src="app/default/js/mockedquery.js"></script>
-      <script src="app/main.js"></script>
+      <script src="app/js/main.js"></script>
 
   </body>
 </html>
