--- a/urbanbyte/index.html
+++ b/urbanbyte/index.html
@@ -60,10 +60,11 @@
 									<div class="pagelet-body">
 										<div class="RichTextElement">
 											<div>
+													<a href="https://itunes.apple.com/us/app/fixture-finder/id1378126147?mt=8">
 												<p style="text-align: center;" class="MsoNormal"><span data-img-src="_Media/fixturefindicon-copy_med.png" data-img-src-hr="_Media/fixturefindicon-copy_med_hr.png" data-alt="" data-width="169" data-height="169" style="width:169px; height:169px;" class="first">
 													<noscript><img src="_Media/fixturefindicon-copy_med.png" alt="" width="169" height="169" /></noscript>
 												</span></p>
-												
+												</a>
 											</div>
 										</div>
 									</div>
@@ -73,10 +74,12 @@
 										<div class="ImageElement">
 											<div class="photo">
 												<div>
+														<a href="https://itunes.apple.com/us/app/queit/id947652867?mt=8">
 													<!-- sandvox.ImageElement --><span data-img-src="_Media/logo_med.png" data-img-src-hr="_Media/logo_med_hr.png" data-alt="logo" data-width="192" data-height="148" style="width:192px; height:148px;">
 														<noscript><img src="_Media/logo_med.png" alt="logo" width="192" height="148" /></noscript>
 													</span>
 													<!-- /sandvox.ImageElement -->
+													</a>
 												</div>
 											</div>
 										</div>
@@ -87,9 +90,11 @@
 										<div class="ImageElement">
 											<div class="photo">
 												<div>
+														<a href="https://itunes.apple.com/us/app/fixture-finder/id1378126147?mt=8">
 													<!-- sandvox.ImageElement --><span data-img-src="_Media/logo-nobackground_med.png" data-img-src-hr="_Media/logo-nobackground_med_hr.png" data-alt="logo-nobackground" data-width="171" data-height="171" style="width:171px; height:171px;">
 														<noscript><img src="_Media/logo-nobackground_med.png" alt="logo-nobackground" width="171" height="171" /></noscript>
 													</span>
+													</a>
 													<!-- /sandvox.ImageElement -->
 												</div>
 											</div>
