--- a/pitt/index.html
+++ b/pitt/index.html
@@ -1,26 +1,24 @@
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!DOCTYPE html>
+<html>
+<title>Hello Strapdown</title>
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<xmp theme="united" style="display:none;">
+  # Welcome
+  Thank you for taking the time to attend the lecture. Here are links to the resources we used in class
+  
+  ## Class Resources
+  
+  [Slide Deck](https://www.google.com)
+  
+  [Worksheet - Plot](https://www.google.com)
+  
+  [Worksheet - Instructions](https://www.google.com)
+  
+  ## Worksheet FAQ
+  
+  ### Do I need to include both Ethernet and DMX in my system layout?
+  You may do it all with just DMX if you choose, although challenging yourself is highly encouraged.
+</xmp>
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-<h1 id="welcome">Welcome</h1>
-
-<p>Thank you for taking the time to attend the lecture. Here are links to the resources we used in class</p>
-
-<h2 id="classresources">Class Resources</h2>
-
-<p><a href="https://www.google.com">Slide Deck</a></p>
-
-<p><a href="https://www.google.com">Worksheet - Plot</a></p>
-
-<p><a href="https://www.google.com">Worksheet - Instructions</a></p>
-
-<h2 id="worksheetfaq">Worksheet FAQ</h2>
-
-<h3 id="doineedtoincludebothethernetanddmxinmysystemlayout">Do I need to include both Ethernet and DMX in my system layout?</h3>
-
-<p>You may do it all with just DMX if you choose, although challenging yourself is highly encouraged.</p>
+<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
+</html>
