--- a/pitt/index.html
+++ b/pitt/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html>
-<title>Hello Strapdown</title>
+<title>Lighting Protocols</title>
 
-<xmp theme="united" style="display:none;">
+<style>
+  div {
+    margin: 70px;
+    border: 1px solid #4CAF50;
+  }
+  </style>
+<div>
+<xmp theme="slate" style="display:none;">
+
   # Welcome
   Thank you for taking the time to attend the lecture. Here are links to the resources we used in class
   
   ## Class Resources
   
-  [Slide Deck](https://www.google.com)
+  [Slide Deck](https://github.com/creising/creising.github.io/blob/master/pitt/slides.pdf)
   
-  [Worksheet - Plot](https://www.google.com)
+  [Worksheet - Plot](https://github.com/creising/creising.github.io/blob/master/pitt/plot.pdf)
   
-  [Worksheet - Instructions](https://www.google.com)
+  [Worksheet - Instructions](DMXInstructions.pdf)
   
   ## Worksheet FAQ
   
   ### Do I need to include both Ethernet and DMX in my system layout?
   You may do it all with just DMX if you choose, although challenging yourself is highly encouraged.
-</xmp>
 
+</xmp>
+</div>
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
 </html>
