--- a/pitt/index.html
+++ b/pitt/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>Lighting Protocols</title>
 
-<xmp theme="slate" style="display:none;">
+<xmp theme="none" style="display:none;">
 
   # Welcome
   Thank you for taking the time to attend the lecture. Here are links to the resources we used in class
