--- a/pitt/index.html
+++ b/pitt/index.html
@@ -9,11 +9,11 @@
   
   ## Class Resources
   
-  [Slide Deck](https://github.com/creising/creising.github.io/blob/master/pitt/slides.pdf)
+  [Slide Deck](https://github.com/creising/creising.github.io/raw/master/pitt/slides.pdf)
   
-  [Worksheet - Plot](https://github.com/creising/creising.github.io/blob/master/pitt/plot.pdf)
+  [Worksheet - Plot](https://github.com/creising/creising.github.io/raw/master/pitt/plot.pdf)
   
-  [Worksheet - Instructions](DMXInstructions.pdf)
+  [Worksheet - Instructions](https://github.com/creising/creising.github.io/raw/master/pitt/DMXInstructions.pdf)
   
   ## Worksheet FAQ
   
