--- a/urbanbyte/fixture-finder.html
+++ b/urbanbyte/fixture-finder.html
@@ -58,8 +58,8 @@
 										<div class="ImageElement">
 											<div class="photo">
 												<div>
-													<!-- sandvox.ImageElement --><a href="https://itunes.apple.com/app/id1378126147" target="_blank" class="imageLink"><span data-img-src="_Media/fixturefindicon-copy_med-6.png" data-img-src-hr="_Media/fixturefindicon-copy_med_hr-6.png" data-alt="FixtureFindIcon copy" data-width="205" data-height="205" style="width:205px; height:205px;">
-															<noscript><img src="_Media/fixturefindicon-copy_med-6.png" alt="FixtureFindIcon copy" width="205" height="205" /></noscript>
+													<!-- sandvox.ImageElement --><a href="https://itunes.apple.com/app/id1378126147" target="_blank" class="imageLink"><span data-img-src="_Media/logo-with-app-store-ff-copy_med.png" data-img-src-hr="_Media/logo-with-app-store-ff-copy_med_hr.png" data-alt="logo with app store ff copy" data-width="222" data-height="269" style="width:222px; height:269px;">
+															<noscript><img src="_Media/logo-with-app-store-ff-copy_med.png" alt="logo with app store ff copy" width="222" height="269" /></noscript>
 														</span>
 													</a>
 													<!-- /sandvox.ImageElement -->
