--- a/urbanbyte/line-it.html
+++ b/urbanbyte/line-it.html
@@ -58,9 +58,10 @@
 										<div class="ImageElement">
 											<div class="photo">
 												<div>
-													<!-- sandvox.ImageElement --><span data-img-src="_Media/logo-nobackground_med.png" data-img-src-hr="_Media/logo-nobackground_med_hr.png" data-alt="logo-nobackground" data-width="171" data-height="171" style="width:171px; height:171px;">
-														<noscript><img src="_Media/logo-nobackground_med.png" alt="logo-nobackground" width="171" height="171" /></noscript>
-													</span>
+													<!-- sandvox.ImageElement --><a href="https://itunes.apple.com/us/app/line-it/id1090772813" class="imageLink"><span data-img-src="_Media/logo-with-app-store-lit_med.png" data-img-src-hr="_Media/logo-with-app-store-lit_med_hr.png" data-alt="logo with app store lit" data-width="228" data-height="284" style="width:228px; height:284px;">
+															<noscript><img src="_Media/logo-with-app-store-lit_med.png" alt="logo with app store lit" width="228" height="284" /></noscript>
+														</span>
+													</a>
 													<!-- /sandvox.ImageElement -->
 												</div>
 											</div>
