--- a/urbanbyte/que-it.html
+++ b/urbanbyte/que-it.html
@@ -58,7 +58,7 @@
 										<div class="ImageElement">
 											<div class="photo">
 												<div>
-													<!-- sandvox.ImageElement --><a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=947652867&amp;mt=8id=947652867&amp;mt=8" target="_blank" class="imageLink"><span data-img-src="_Media/21_med.png" data-img-src-hr="_Media/21_med_hr.png" data-alt="21" data-width="228" data-height="247" style="width:228px; height:247px;">
+													<!-- sandvox.ImageElement --><a href="https://itunes.apple.com/us/app/queit/id947652867?mt=8id=947652867&amp;mt=8id=947652867&amp;mt=8" target="_blank" class="imageLink"><span data-img-src="_Media/21_med.png" data-img-src-hr="_Media/21_med_hr.png" data-alt="21" data-width="228" data-height="247" style="width:228px; height:247px;">
 															<noscript><img src="_Media/21_med.png" alt="21" width="228" height="247" /></noscript>
 														</span>
 													</a>
