--- a/urbanbyte/get-started-line-it-/index.html
+++ b/urbanbyte/get-started-line-it-/index.html
@@ -58,7 +58,7 @@
 										<div class="ImageElement">
 											<div class="photo">
 												<div>
-													<!-- sandvox.ImageElement --><a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1090772813&amp;mt=8" target="_blank" class="imageLink"><span data-img-src="../_Media/22_med.png" data-img-src-hr="../_Media/22_med_hr.png" data-alt="22" data-width="228" data-height="270" style="width:228px; height:270px;">
+													<!-- sandvox.ImageElement --><a href="https://itunes.apple.com/us/app/line-it/id1090772813id=1090772813&amp;mt=8" target="_blank" class="imageLink"><span data-img-src="../_Media/22_med.png" data-img-src-hr="../_Media/22_med_hr.png" data-alt="22" data-width="228" data-height="270" style="width:228px; height:270px;">
 															<noscript><img src="../_Media/22_med.png" alt="22" width="228" height="270" /></noscript>
 														</span>
 													</a>
